# llmtop

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
llmtop/: __init__.py  __main__.py  cli.py  core.py  gpu.py  models.py  system.py
llmtop/adapters/: __init__.py  base.py  llamacpp.py  ollama.py  openai_generic.py  prom.py  sglang.py  tgi.py  unknown.py  vllm.py
llmtop/discovery/: __init__.py  discover.py  fingerprint.py  port_scan.py  process_scan.py
llmtop/tui/: __init__.py  app.py  widgets.py
tests/: conftest.py  test_adapters_ollama.py  test_adapters_robustness.py  test_adapters_vllm.py  test_cli.py  test_core.py  test_detection.py  test_discovery.py  test_gpu.py  test_prom.py
tests/fixtures/live/: ollama_tags.json  ollama_version.json  router_8077_models.json  vllm_8088_metrics.txt  vllm_8088_models.json
