[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmtop"
version = "0.1.0"
description = "An nvtop for local LLM inference: zero-config autodiscovery of vLLM, llama.cpp, Ollama, TGI, SGLang + live GPU and serving metrics in a Textual TUI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rxxusp" }]
keywords = ["llm", "vllm", "ollama", "llama.cpp", "tgi", "sglang", "gpu", "nvtop", "htop", "tui", "monitoring", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "textual>=0.60",
    "httpx>=0.27",
    "psutil>=5.9",
    "nvidia-ml-py>=12.535",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/rxxusp/llmtop"
Repository = "https://github.com/rxxusp/llmtop"
Issues = "https://github.com/rxxusp/llmtop/issues"

[project.scripts]
llmtop = "llmtop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llmtop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
